Fixes bbcode buttons shifting around in narrow views if there are chat info messages
Closes #346

--- a/scss/_bbcode_editor.scss
+++ b/scss/_bbcode_editor.scss
@@ -15,10 +15,16 @@
     background: $text-background-color;
     padding: 10px;
     position: absolute;
-    top: 0;
-    border-radius: 3px;
+    bottom: 0px;
+    left: 0px;
+    border-radius: var(--bs-border-radius);
+    width: 100%;
+    height: 100%;
     z-index: 20;
     display: none;
+    .toolbar-buttons {
+      width: 100%;
+    }
     .btn {
       margin: 3px;
       border-radius: $btn-border-radius !important;
